--- a/mars_explorer/src/mars_explorer/crews/drone_crew/config/tasks.yaml
+++ b/mars_explorer/src/mars_explorer/crews/drone_crew/config/tasks.yaml
@@ -1,6 +1,6 @@
 generating_route:
   description: >
-    Analyze the aggregated mission report to compute optimal, safe, and energy-efficient flight routes for all drones. Consider environmental conditions, terrain elevation, airspace constraints, and mission objectives to ensure effective navigation and coverage. Compile detailed flight plans for each drone and prepare them for integration into the overall mission strategy.
+    Analyze the aggregated mission report and the GraphML to compute optimal, safe, and energy-efficient flight routes for all drones. Consider environmental conditions, terrain elevation, airspace constraints, and mission objectives to ensure effective navigation and coverage. Compile detailed flight plans for each drone and prepare them for integration into the overall mission strategy. GraphML document: {{mars_graph}}
   expected_output: >
     A detailed report containing the optimal route for each drone
   agent: flight_planner_agent
