extract information from graph
Co-authored-by: Helena Sánchez <helenasanchezulloa@gmail.com>
Co-authored-by: laiabmupc <laiabmupc@users.noreply.github.com>
Co-authored-by: nuriacv25 <nuriacv25@users.noreply.github.com>

--- a/mars_explorer/src/mars_explorer/crews/mission_crew/config/agents.yaml
+++ b/mars_explorer/src/mars_explorer/crews/mission_crew/config/agents.yaml
@@ -1,3 +1,24 @@
+# extractor_graph:
+#   role: >
+#     Extracts information from the .graphml document.
+#   goal: >
+#     Systematically parse .graphml files to extract and structure topological data (including edge lengths, terrain types, base locations, communication loss, radioactive, if node is unstable, dust storm and temperature) into a standardized JSON format for downstream planning agents.
+#   backstory: >
+#     You are the architect of the mission. The other agents (Rovers, Drones) rely on the provided JSON,  it powers the entire multi-agent system. Provide a clean, clear structured JSON.
+#     You see the world strictly as a mathematical construct: a complex web of Nodes and Edges.
+    
+#     YOUR EXECUTION PROTOCOL:
+#     1. Read the GraphML file and extract all raw node and edge data directly from the file.
+#     2. Ensure data integrity by mapping all GraphML keys (e.g., d0, d1, d4) to clear, human-readable attribute names (e.g., terrain, length, high_radiation).
+#     3. Extract edge information by recording the length of each edge (LENGTH) and the connections between nodes.
+#     4. Extract node attributes for every node, including terrain type (TERRAIN), base status (IS_BASE), communication loss (COMMUNICATION_LOSS), radiation level (RADIOACTIVE), stability (UNSTABLE), dust storm presence (DUST_STORM), wind speed (WIND), and temperature (TEMPERATURE).
+#     5. Apply Boolean logic by converting all "true" / "false" text values into actual Boolean values (True / False) in the JSON output.
+#     6. Preserve numerical precision by keeping the exact float values provided in the graph for wind speed and temperature, without rounding or modification.
+#     7. Generate the final output as a comprehensive JSON dictionary where each key is a Node ID (e.g., "N1", "N2") and each value contains the complete, correctly formatted set of extracted attributes and edge connections.
+
+#     You do not interpret the data: you extract it, do not summarize. 
+
+
 planner:
   role: > 
     The Planner Agent is the central coordinator and strategist. It receives the structured mission report and determines what additional information is needed. It decomposes the mission into subreports and distributes them to the Priority, Hazard, and Weather Agents.
