--- a/mars_explorer/src/mars_explorer/crews/mission_crew/config/tasks.yaml
+++ b/mars_explorer/src/mars_explorer/crews/mission_crew/config/tasks.yaml
@@ -10,71 +10,94 @@ additional_information:
     A structured mission decomposition including: a subreport for task prioritization, a subreport for hazard and constraint analysis, a subreport for weather and environmental analysis and each subreport should contain only the information relevant to its target agent.
   agent: planner
 
-extract_terrain:
-  description: >
-    You are given a GraphML document representing a terrain graph. Each node has an id (e.g., N0, N1, ...) and a terrain type stored in <data key='d0'>.</data>. Your task is to extract the terrain type for EACH node. Do NOT summarize, infer or guess. Return ALL nodes. GraphML document: {{mars_graph}}
-  expected_output: >
-    A JSON dictionary where each key is a node ID (e.g., N0) and each value is the corresponding terrain type
-  agent: planner
 
-extract_is_base:
-  description: >
-    You are given a GraphML document representing a terrain graph. Each node has an id (e.g., N0, N1, ...) and a boolean flag indicating whether the node is a mission base stored in <data key='d2'>.</data>. Your task is to extract the is_base value for EACH node. Do NOT summarize, infer or guess. Return ALL nodes. GraphML document: {{mars_graph}}
-  expected_output: >
-    A JSON dictionary where each key is a node ID (e.g., N0) and each value is a boolean indicating whether the node is a base (true or false).
-  agent: planner
+# extract_martian_environment_data:
+#   description: >
+#     YOUR EXECUTION PROTOCOL:
+#     1. READ FILE: Use your specialized tool to access the GraphML document.
+#     2. MAP ATTRIBUTES: For every node ID (e.g., N0, N1), extract the following and map to these keys:
+#         - 'd0' -> terrain (sandy, rocky, plain, icy, or crater) 
+#         - 'd1' -> is_base (Boolean) 
+#         - 'd2' -> communication_loss (Boolean)
+#         - 'd3' -> radioactive (Boolean) 
+#         - 'd4' -> unstable (Boolean) 
+#         - 'd5' -> dust_storm (Boolean)
+#         - 'd6' -> wind_speed (Float)
+#         - 'd7' -> temperature (Float)
+#     3. EXTRACT EDGES: Record every connection between nodes and the physical 'length' of that path.
+#     4. DATA INTEGRITY: Convert "true"/"false" strings into actual Booleans (True/False). Maintain exact float precision for wind and temperature.
+#     5. NO INTERPRETATION: Do not summarize. Return ALL nodes and ALL attributes.
+#     GraphML document: {{mars_graph}}
+#   expected_output: >
+#     A comprehensive JSON object with two main keys: 
+#     "nodes": a dictionary where each key is a Node ID and each value is its full set of 8 attributes.
+#     "edges": a list of all connections including source, target, and length.
+#   agent: extractor_graph
+# extract_terrain:
+#   description: >
+#     You are given a GraphML document representing a terrain graph. Each node has an id (e.g., N0, N1, ...) and a terrain type stored in <data key='d0'>.</data>. Your task is to extract the terrain type for EACH node. Do NOT summarize, infer or guess. Return ALL nodes. GraphML document: {{mars_graph}}
+#   expected_output: >
+#     A JSON dictionary where each key is a node ID (e.g., N0) and each value is the corresponding terrain type
+#   agent: extractor_graph
 
-extract_communication_loss:
-  description: >
-    You are given a GraphML document representing a terrain graph. Each node has an id (e.g., N0, N1, ...) and a boolean flag indicating communication loss stored in <data key='d3'>.</data>. Your task is to extract the communication_loss value for EACH node. Do NOT summarize, infer or guess. Return ALL nodes. GraphML document: {{mars_graph}}
-  expected_output: >
-    A JSON dictionary where each key is a node ID (e.g., N0) and each value is a boolean indicating whether communication loss is present.
-  agent: planner
+# extract_is_base:
+#   description: >
+#     You are given a GraphML document representing a terrain graph. Each node has an id (e.g., N0, N1, ...) and a boolean flag indicating whether the node is a mission base stored in <data key='d2'>.</data>. Your task is to extract the is_base value for EACH node. Do NOT summarize, infer or guess. Return ALL nodes. GraphML document: {{mars_graph}}
+#   expected_output: >
+#     A JSON dictionary where each key is a node ID (e.g., N0) and each value is a boolean indicating whether the node is a base (true or false).
+#   agent: extractor_graph
 
-extract_high_radiation:
-  description: >
-    You are given a GraphML document representing a terrain graph. Each node has an id (e.g., N0, N1, ...) and a boolean flag indicating high radiation stored in <data key='d4'>.</data>. Your task is to extract the high_radiation value for EACH node. Do NOT summarize, infer or guess. Return ALL nodes. GraphML document: {{mars_graph}}
-  expected_output: >
-    A JSON dictionary where each key is a node ID (e.g., N0) and each value is a boolean indicating whether high radiation is present.
-  agent: planner
+# extract_communication_loss:
+#   description: >
+#     You are given a GraphML document representing a terrain graph. Each node has an id (e.g., N0, N1, ...) and a boolean flag indicating communication loss stored in <data key='d3'>.</data>. Your task is to extract the communication_loss value for EACH node. Do NOT summarize, infer or guess. Return ALL nodes. GraphML document: {{mars_graph}}
+#   expected_output: >
+#     A JSON dictionary where each key is a node ID (e.g., N0) and each value is a boolean indicating whether communication loss is present.
+#   agent: extractor_graph
 
-extract_unstable:
-  description: >
-    You are given a GraphML document representing a terrain graph. Each node has an id (e.g., N0, N1, ...) and a boolean flag indicating unstable terrain stored in <data key='d5'>.</data>. Your task is to extract the unstable value for EACH node. Do NOT summarize, infer or guess. Return ALL nodes. GraphML document: {{mars_graph}}
-  expected_output: >
-    A JSON dictionary where each key is a node ID (e.g., N0) and each value is a boolean indicating whether the terrain is unstable.
-  agent: planner
+# extract_high_radiation:
+#   description: >
+#     You are given a GraphML document representing a terrain graph. Each node has an id (e.g., N0, N1, ...) and a boolean flag indicating high radiation stored in <data key='d4'>.</data>. Your task is to extract the high_radiation value for EACH node. Do NOT summarize, infer or guess. Return ALL nodes. GraphML document: {{mars_graph}}
+#   expected_output: >
+#     A JSON dictionary where each key is a node ID (e.g., N0) and each value is a boolean indicating whether high radiation is present.
+#   agent: extractor_graph
 
-extract_dust_storms:
-  description: >
-    You are given a GraphML document representing a terrain graph. Each node has an id (e.g., N0, N1, ...) and a boolean flag indicating dust storms stored in <data key='d6'>.</data>. Your task is to extract the dust_storms value for EACH node. Do NOT summarize, infer or guess. Return ALL nodes. GraphML document: {{mars_graph}}
-  expected_output: >
-    A JSON dictionary where each key is a node ID (e.g., N0) and each value is a boolean indicating whether dust storms are present.
-  agent: planner
+# extract_unstable:
+#   description: >
+#     You are given a GraphML document representing a terrain graph. Each node has an id (e.g., N0, N1, ...) and a boolean flag indicating unstable terrain stored in <data key='d5'>.</data>. Your task is to extract the unstable value for EACH node. Do NOT summarize, infer or guess. Return ALL nodes. GraphML document: {{mars_graph}}
+#   expected_output: >
+#     A JSON dictionary where each key is a node ID (e.g., N0) and each value is a boolean indicating whether the terrain is unstable.
+#   agent: extractor_graph
 
-extract_wind:
-  description: >
-    You are given a GraphML document representing a terrain graph. Each node has an id (e.g., N0, N1, ...) and a numeric wind value stored in <data key='d7'>.</data>. Your task is to extract the wind value for EACH node. Do NOT summarize, infer or guess. Return ALL nodes. GraphML document: {{mars_graph}}
-  expected_output: >
-    A JSON dictionary where each key is a node ID (e.g., N0) and each value is the wind intensity as a number.
-  agent: planner
+# extract_dust_storms:
+#   description: >
+#     You are given a GraphML document representing a terrain graph. Each node has an id (e.g., N0, N1, ...) and a boolean flag indicating dust storms stored in <data key='d6'>.</data>. Your task is to extract the dust_storms value for EACH node. Do NOT summarize, infer or guess. Return ALL nodes. GraphML document: {{mars_graph}}
+#   expected_output: >
+#     A JSON dictionary where each key is a node ID (e.g., N0) and each value is a boolean indicating whether dust storms are present.
+#   agent: extractor_graph
 
-extract_temperature:
-  description: >
-    You are given a GraphML document representing a terrain graph. Each node has an id (e.g., N0, N1, ...)
-    and a numeric temperature value stored in <data key='d8'>.</data>.
-    Your task is to extract the temperature value for EACH node. Do NOT summarize, infer or guess.
-    Return ALL nodes. GraphML document: {{mars_graph}}
-  expected_output: >
-    A JSON dictionary where each key is a node ID (e.g., N0) and each value is the temperature as a number.
-  agent: planner
+# extract_wind:
+#   description: >
+#     You are given a GraphML document representing a terrain graph. Each node has an id (e.g., N0, N1, ...) and a numeric wind value stored in <data key='d7'>.</data>. Your task is to extract the wind value for EACH node. Do NOT summarize, infer or guess. Return ALL nodes. GraphML document: {{mars_graph}}
+#   expected_output: >
+#     A JSON dictionary where each key is a node ID (e.g., N0) and each value is the wind intensity as a number.
+#   agent: extractor_graph
 
-extract_edge_lengths:
-  description: >
-    You are given a GraphML document representing a terrain graph. Each edge connects two nodes and has a numeric length stored in <data key='d1'>.</data>. Your task is to extract ALL edges with their source node, target node, and length. Do NOT summarize, infer or guess. Return ALL edges. GraphML document: {{mars_graph}}
-  expected_output: >
-    A JSON list where each element contains: source: node ID, target: node ID and length: numeric edge length
-  agent: planner
+# extract_temperature:
+#   description: >
+#     You are given a GraphML document representing a terrain graph. Each node has an id (e.g., N0, N1, ...)
+#     and a numeric temperature value stored in <data key='d8'>.</data>.
+#     Your task is to extract the temperature value for EACH node. Do NOT summarize, infer or guess.
+#     Return ALL nodes. GraphML document: {{mars_graph}}
+#   expected_output: >
+#     A JSON dictionary where each key is a node ID (e.g., N0) and each value is the temperature as a number.
+#   agent: extractor_graph
+
+# extract_edge_lengths:
+#   description: >
+#     You are given a GraphML document representing a terrain graph. Each edge connects two nodes and has a numeric length stored in <data key='d1'>.</data>. Your task is to extract ALL edges with their source node, target node, and length. Do NOT summarize, infer or guess. Return ALL edges. GraphML document: {{mars_graph}}
+#   expected_output: >
+#     A JSON list where each element contains: source: node ID, target: node ID and length: numeric edge length
+#   agent: extractor_graph
 
 
 
