correct json format
Co-authored-by: Helena Sánchez <helenasanchezulloa@gmail.com>

--- a/mars_explorer/src/mars_explorer/crews/mission_crew/config/agents.yaml
+++ b/mars_explorer/src/mars_explorer/crews/mission_crew/config/agents.yaml
@@ -33,6 +33,8 @@ priority:
       "drone": { "high": [], "medium": [], "low": [] },
       "satellite": { "high": [], "medium": [], "low": [] }
     }
+    Return only raw JSON. Do not include markdown code blocks, backticks, or any introductory text. Start your response with '{' and end with '}'.
+
 
 hazard:
   role: >
